Project 2 Attempt 2/metadataPackage_1568323404468/objects/AccountQuiz__c.object
<CustomObject>
    <label>AccountQuiz</label>
    <nameField>
        <label>AccountQuiz Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountQuizzes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountQuizzes</relationshipLabel>
        <relationshipName>AccountQuizzes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quiz__c</fullName>
        <label>Quiz</label>
        <referenceTo>Quiz__c</referenceTo>
        <relationshipLabel>AccountQuizzes</relationshipLabel>
        <relationshipName>AccountQuizzes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>